# Turn-Based-Game

./: Bad_Entity_Type.cpp  Bad_Heroes.cpp  CMakeLists.txt  Entity.cpp  Entity.hpp  Good_Entity_Type.cpp  Good_Heroes.cpp  Zombie.hpp  game_UI.cpp  main.cpp  tests.cpp
includes/: Bad_Entity_Type.hpp  Bad_Heroes.hpp  Entity.hpp  Good_Entity_Type.hpp  Good_Heroes.hpp  Zombie.hpp
src/: Bad_Entity_Type.cpp  Bad_Heroes.cpp  BattleEvent.cpp  Entity.cpp  Good_Army.cpp  Good_Entity_Type.cpp  Good_Heroes.cpp  main.cpp
tests/: tests.cpp
